// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`User email templates should render account created SSO template 1`] = `
{
  "body": "
    <p>Dear Jane Doe,</p>
    <p>
      You have been added to the 121 Portal by the platform admin.<br>
      To log in, go to: <a href="http://localhost:8888">http://localhost:8888</a>
    </p>
    <p>
      Account e-mail: user@example.org
    </p>
    <p>
      For assistance, if you were not expecting this email or believe it was sent to you by mistake,
      please contact: <a href="mailto:support@121.global">support@121.global</a>
    </p>
    <p>
      Best regards,<br>
      121 Support Team
    </p>
  ",
  "subject": "121 Portal account created",
}
`;

exports[`User email templates should render account created template 1`] = `
{
  "body": "
    <p>Dear Jane Doe,</p>
    <p>
      You have been added to the 121 Portal by the platform admin.<br>
      To log in, go to: <a href="http://localhost:8888">http://localhost:8888</a>
    </p>
    <p>
      Username: user@example.org<br>
      Password: <code>temp-pass-123</code>
    </p>
    <p>
      After logging in, please change your password on: <a href="http://localhost:8888/change-password">http://localhost:8888/change-password</a>
    </p>
    <p>
      For assistance, if you were not expecting this email or believe it was sent to you by mistake,
      please contact: <a href="mailto:support@121.global">support@121.global</a>
    </p>
    <p>
      Best regards,<br>
      121 Support Team
    </p>
  ",
  "subject": "121 Portal account created",
}
`;

exports[`User email templates should render password reset template 1`] = `
{
  "body": "
    <p>Dear Jane Doe,</p>
    <p>
      Your password for the 121 Portal has been reset.<br>
      To log in again, go to: <a href="http://localhost:8888">http://localhost:8888</a>
    </p>
    <p>
      Username: user@example.org<br>
      Password: <code>temp-pass-123</code>
    </p>
    <p>
      After logging in, please change your password on: <a href="http://localhost:8888/change-password">http://localhost:8888/change-password</a>
    </p>
    <p>
      For assistance, if you were not expecting this email or believe it was sent to you by mistake,
      please contact: <a href="mailto:support@121.global">support@121.global</a>
    </p>
    <p>
      Best regards,<br>
      121 Support Team
    </p>
  ",
  "subject": "121 Portal password reset",
}
`;
